--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SocialCompass"
         tools:targetApi="31">
-
+        <activity
+            android:name=".AddLocationsActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".CompassActivity"
             android:exported="false">
